--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -1,5 +1,6 @@
 section(class='video-filter')
 	div(class='video-filter__left-side-bar')
+		h2(class='video-filter__left-side-bar__title') Featured
 		div(class='swiper video-filter-slider')
 			div(class='swiper-wrapper')
 				-for(let i = 1; i <= 3; i++)
