--- a/styles.css
+++ b/styles.css
@@ -622,13 +622,30 @@ ul li {
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
-  padding: 15px;
+  padding: 50px 15px 15px 15px;
 }
 @media screen and (min-width: 1024px) {
   .video-filter__left-side-bar {
     padding: 72px;
     -ms-flex-preferred-size: 526px;
         flex-basis: 526px;
+    padding: 15px 15px 15px 15px;
+  }
+}
+.video-filter__left-side-bar__title {
+  color: var(--Primary-Dark-Blue, var(--Primary-Dark-Blue, #192666));
+  /* Desktop/Heading/Heading3 */
+  font-family: Montserrat;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 44.4px */
+  letter-spacing: -0.37px;
+  padding-bottom: 40px;
+}
+@media screen and (min-width: 1440px) {
+  .video-filter__left-side-bar__title {
+    font-size: 37px;
   }
 }
 .video-filter__content {
