--- a/src/scss/internal-modules/_video-filter.scss
+++ b/src/scss/internal-modules/_video-filter.scss
@@ -233,6 +233,7 @@
 		width: 288px !important;
 		@include from(l){
 			margin-bottom: 15px;
+			width: 100% !important;
 		}
 	}
 	@include from(l){
