--- a/src/pug/internal-modules/video-banner.pug
+++ b/src/pug/internal-modules/video-banner.pug
@@ -8,4 +8,4 @@ section(class='video-banner')
 				| our step-by-step guides will ensure you spend less time figuring out payments and more time enjoying your 
 				| favorite games. Get started today and experience seamless, secure, and swift transactions with BetAnySports.
 		div(class='video-banner__container-item')
-			img(src="images/Hero.webp", alt="hero", class='video-banner__container-hero')
+			img(src="https://img.betanysports.eu/landing/videos/Hero.webp", alt="hero", class='video-banner__container-hero')
