--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -5,11 +5,11 @@ section(class='video-filter')
 			div(class='swiper-wrapper')
 				-for(let i = 1; i <= 3; i++)
 					div(class='swiper-slide video-filter-slider__item')
-						img(src="images/thumbnail2.webp", class='swiper-slide video-filter-slider__img' alt="video")
+						img(src="https://img.betanysports.eu/landing/videos/thumbnail2.webp", class='swiper-slide video-filter-slider__img' alt="video")
 	div(class='video-filter__content')
 		div(class='video-filter__controls')
 			div(class='video-filter__controls-input-container')
-				img(src="images/magnifyingglass.svg", alt="")
+				img(src="https://img.betanysports.eu/landing/videos/magnifyingglass.svg", alt="")
 				input(type="text", class='video-filter__controls-input', placeholder='search')
 			
 
