--- a/src/scss/internal-modules/_video-filter.scss
+++ b/src/scss/internal-modules/_video-filter.scss
@@ -202,7 +202,7 @@
 			padding-left: 35px;
 			&::before{
 				content: "";
-				background: url('images/check.svg') no-repeat ;
+				background: url('https://img.betanysports.eu/landing/videos/check.svg') no-repeat ;
 				background-size: contain;
 				position: absolute;
 				background-size: contain;
