--- a/src/scss/internal-modules/_video-filter.scss
+++ b/src/scss/internal-modules/_video-filter.scss
@@ -45,8 +45,9 @@
 	&__content{
 		// border: 1px solid blue;
 		width: 100%;
-		padding: 15px;
+		padding: 15px 15px 15px 15px;
 		@include from(1024px){
+			padding: 0 15px 15px 15px;
 			// margin-left: 19px;
 		}
 	}
