--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -19,9 +19,9 @@ section(class='video-filter')
 					div(class='swiper-slide video-filter-buttons-slider__item')
 						button(class='video-filter__controls-button active', data-filter='all') Show all
 					div(class='swiper-slide video-filter-buttons-slider__item')
-						button(class='video-filter__controls-button', data-filter='cash') Cash
+						button(class='video-filter__controls-button', data-filter='cash') CASH APP
 					div(class='swiper-slide video-filter-buttons-slider__item')
-						button(class='video-filter__controls-button', data-filter='bitcoin') Bitcoin
+						button(class='video-filter__controls-button', data-filter='bitcoin') COINBASE
 
 
 
