--- a/public/styles.css
+++ b/public/styles.css
@@ -614,8 +614,6 @@ ul li {
   }
 }
 .video-filter__left-side-bar {
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
   background-color: #f4f4f4;
   -ms-flex-preferred-size: 210px;
       flex-basis: 210px;
@@ -626,6 +624,10 @@ ul li {
 }
 @media screen and (min-width: 1024px) {
   .video-filter__left-side-bar {
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
     padding: 72px;
     -ms-flex-preferred-size: 526px;
         flex-basis: 526px;
