--- a/src/scss/internal-modules/_video-filter.scss
+++ b/src/scss/internal-modules/_video-filter.scss
@@ -15,13 +15,16 @@
 		padding: 160px 0;
 	}
 	&__left-side-bar{
-		border-top-left-radius: 16px;
-		border-top-right-radius: 16px;
+		
 		background-color: #f4f4f4;
 		flex-basis: 210px;
 		flex-grow: 0;
-		padding: 50px 15px 50px 15px;
+		padding: 50px 15px 50px 15px; 
 		@include from(1024px){
+			border-top-left-radius: 16px;
+			border-top-right-radius: 16px;
+			border-bottom-left-radius: 16px;
+			border-bottom-right-radius: 16px;
 			padding: 72px;
 			flex-basis: 526px;
 			padding: 15px 15px 15px 15px;
