--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,7 +1,7 @@
 extends ../config/template 
 append config
-	-currentPage		= "Juren"
-	-siteName			= 'compa'
+	-currentPage		= "video"
+	-siteName			= 'example'
 	-content			= 'content' 
 	-pageDescription	= 'Pagina inicial de MyBoilerplate'
 block main-header
