--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -37,7 +37,7 @@ section(class='video-filter')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
-						span(class='video-filter__content-grid-item-title') 2. Buying with Cash App
+						span(class='video-filter__content-grid-item-title') 2. Buying Bitcoin with Cash App
 				div(class='video-filter__content-grid-item bitcoin')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
@@ -52,7 +52,7 @@ section(class='video-filter')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
-						span(class='video-filter__content-grid-item-title') 5. Set up a App Account
+						span(class='video-filter__content-grid-item-title') 5. Set up a Cash App Account
 				//- -for(let i = 1; i <= 2; i++)
 				//- 	div(class='video-filter__content-grid-item cash')
 				//- 		div(class='video-filter__content-grid-item-img-container')
