--- a/styles.css
+++ b/styles.css
@@ -940,5 +940,17 @@ ul li {
 
 /*here finish de website internal components modules*/
 /*here start the hacks section*/
+.video-filter-modal {
+  border: 4px solid red;
+  max-width: 1200px !important;
+  padding: 0 15px;
+}
+
+.video-filter-modal > .modal-body > iframe {
+  width: 100%;
+  height: 100%;
+  min-height: 300px; /* Ajusta este valor según sea necesario */
+}
+
 /*here finish the hacks section*/
 /*# sourceMappingURL=styles.css.map */
