--- a/src/pug/internal-modules/modal.pug
+++ b/src/pug/internal-modules/modal.pug
@@ -1,7 +1,46 @@
-div(id='exampleModalToggle' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel' tabindex='-1')
+// Modal 1
+div(id='exampleModalToggle1' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel1' tabindex='-1')
 	.modal-dialog.modal-dialog-centered.video-filter-modal
 		.modal-content
 			.modal-body
-				video(id='videoElement' width='560' height='315' controls autoplay loop muted)
-					source(src='video/buying_bitcoin_cashapp.mp4' type='video/mp4')
-button(class='btn btn-primary' data-bs-target='#exampleModalToggle' data-bs-toggle='modal') Open first modal
+				video(id='videoElement1' width='100%' height='auto' controls autoplay loop muted)
+					source(src='video/casino_dk.mp4' type='video/mp4')
+
+// Modal 2
+div(id='exampleModalToggle2' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel2' tabindex='-1')
+	.modal-dialog.modal-dialog-centered.video-filter-modal
+		.modal-content
+			.modal-body
+				video(id='videoElement2' width='100%' height='auto' controls autoplay loop muted)
+					source(src='video/lottery_dk.mp4' type='video/mp4')
+
+// Modal 3
+div(id='exampleModalToggle3' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel3' tabindex='-1')
+	.modal-dialog.modal-dialog-centered.video-filter-modal
+		.modal-content
+			.modal-body
+				video(id='videoElement3' width='100%' height='auto' controls autoplay loop muted)
+					source(src='video/sports_dk.mp4' type='video/mp4')
+
+// Modal 4
+div(id='exampleModalToggle4' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel4' tabindex='-1')
+	.modal-dialog.modal-dialog-centered.video-filter-modal
+		.modal-content
+			.modal-body
+				video(id='videoElement4' width='100%' height='auto' controls autoplay loop muted)
+					source(src='video/nhl_dk.mp4' type='video/mp4')
+
+// Modal 5
+div(id='exampleModalToggle5' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel5' tabindex='-1')
+	.modal-dialog.modal-dialog-centered.video-filter-modal
+		.modal-content
+			.modal-body
+				video(id='videoElement5' width='100%' height='auto' controls autoplay loop muted)
+					source(src='video/nba_dk.mp4' type='video/mp4')
+
+// Buttons to open each modal
+//- button(class='btn btn-primary' data-bs-target='#exampleModalToggle1' data-bs-toggle='modal') Open first modal
+//- button(class='btn btn-primary' data-bs-target='#exampleModalToggle2' data-bs-toggle='modal') Open second modal
+//- button(class='btn btn-primary' data-bs-target='#exampleModalToggle3' data-bs-toggle='modal') Open third modal
+//- button(class='btn btn-primary' data-bs-target='#exampleModalToggle4' data-bs-toggle='modal') Open fourth modal
+//- button(class='btn btn-primary' data-bs-target='#exampleModalToggle5' data-bs-toggle='modal') Open fifth modal
