--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -28,27 +28,27 @@ section(class='video-filter')
 			div(class='video-filter__content-title-container')
 				h2(class='video-filter__content-title') Step-by-Step Guides
 			div(class='video-filter__content-grid' id='myGrid')
-				div(class='video-filter__content-grid-item cash')
+				div(class='video-filter__content-grid-item cash' data-bs-target='#exampleModalToggle1' data-bs-toggle='modal')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 1. Full Cash App + Bitcoin Tutorial
-				div(class='video-filter__content-grid-item bitcoin')
+				div(class='video-filter__content-grid-item bitcoin' data-bs-target='#exampleModalToggle2' data-bs-toggle='modal')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 2. Buying Bitcoin with Cash App
-				div(class='video-filter__content-grid-item bitcoin')
+				div(class='video-filter__content-grid-item bitcoin' data-bs-target='#exampleModalToggle3' data-bs-toggle='modal')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 3. Receiving Bitcoin thru Cash App
-				div(class='video-filter__content-grid-item bitcoin')
+				div(class='video-filter__content-grid-item bitcoin' data-bs-target='#exampleModalToggle4' data-bs-toggle='modal')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
 						span(class='video-filter__content-grid-item-title') 4. Sending Bitcoin thru Cash App
-				div(class='video-filter__content-grid-item bitcoin')
+				div(class='video-filter__content-grid-item bitcoin' data-bs-target='#exampleModalToggle5' data-bs-toggle='modal')
 					div(class='video-filter__content-grid-item-img-container')
 						img(src='images/thumbnail.webp', class='video-filter__content-grid-item-img' alt='')
 					div(class='video-filter__content-grid-item-title-container')
