--- a/src/pug/internal-modules/video-filter.pug
+++ b/src/pug/internal-modules/video-filter.pug
@@ -3,9 +3,13 @@ section(class='video-filter')
 		h2(class='video-filter__left-side-bar__title') Featured
 		div(class='swiper video-filter-slider')
 			div(class='swiper-wrapper')
-				-for(let i = 1; i <= 3; i++)
-					div(class='swiper-slide video-filter-slider__item')
-						img(src="https://img.betanysports.eu/landing/videos/thumbnail2.webp", class='swiper-slide video-filter-slider__img' alt="video")
+				//- -for(let i = 1; i <= 3; i++)
+				div(class='swiper-slide video-filter-slider__item')
+					img(src="https://img.betanysports.eu/landing/videos/thumbnail2.webp", class='swiper-slide video-filter-slider__img' alt="video" data-bs-target='#exampleModalToggle1' data-bs-toggle='modal')
+				div(class='swiper-slide video-filter-slider__item')
+					img(src="https://img.betanysports.eu/landing/videos/thumbnail2.webp", class='swiper-slide video-filter-slider__img' alt="video" data-bs-target='#exampleModalToggle2' data-bs-toggle='modal')
+				div(class='swiper-slide video-filter-slider__item')
+					img(src="https://img.betanysports.eu/landing/videos/thumbnail2.webp", class='swiper-slide video-filter-slider__img' alt="video" data-bs-target='#exampleModalToggle3' data-bs-toggle='modal')
 	div(class='video-filter__content')
 		div(class='video-filter__controls')
 			div(class='video-filter__controls-input-container')
@@ -16,7 +20,7 @@ section(class='video-filter')
 
 			div(id='myBtnContainer', class='swiper video-filter-buttons-slider')
 				div(class='swiper-wrapper')
-					div(class='swiper-slide video-filter-buttons-slider__item')
+					div(class='swiper-slide video-filter-buttons-slider__item popo')
 						button(class='video-filter__controls-button active', data-filter='all') Show all
 					div(class='swiper-slide video-filter-buttons-slider__item')
 						button(class='video-filter__controls-button', data-filter='cash') CASH APP
