--- a/src/pug/internal-modules/modal.pug
+++ b/src/pug/internal-modules/modal.pug
@@ -3,8 +3,9 @@ div(id='exampleModalToggle1' class='modal fade' aria-hidden='true' aria-labelled
 	.modal-dialog.modal-dialog-centered.video-filter-modal
 		.modal-content
 			.modal-body
+				span(class='video-filter-modal__close-modal'): img(src="https://img.betanysports.eu/landing/videos/X.svg", alt="close" data-bs-dismiss='modal' aria-label='Close')
 				video(id='videoElement1' width='100%' height='auto' controls autoplay loop muted)
-					source(src='video/casino_dk.mp4' type='video/mp4')
+					source(src='video/buying_bitcoin_cash_app_tutorial.mp4' type='video/mp4')
 
 // Modal 2
 div(id='exampleModalToggle2' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel2' tabindex='-1')
@@ -12,7 +13,7 @@ div(id='exampleModalToggle2' class='modal fade' aria-hidden='true' aria-labelled
 		.modal-content
 			.modal-body
 				video(id='videoElement2' width='100%' height='auto' controls autoplay loop muted)
-					source(src='video/lottery_dk.mp4' type='video/mp4')
+					source(src='video/full_ccash_app_tutorial_ending.mp4' type='video/mp4')
 
 // Modal 3
 div(id='exampleModalToggle3' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel3' tabindex='-1')
@@ -20,7 +21,7 @@ div(id='exampleModalToggle3' class='modal fade' aria-hidden='true' aria-labelled
 		.modal-content
 			.modal-body
 				video(id='videoElement3' width='100%' height='auto' controls autoplay loop muted)
-					source(src='video/sports_dk.mp4' type='video/mp4')
+					source(src='video/receiving_bitcoin_cash_app.mp4' type='video/mp4')
 
 // Modal 4
 div(id='exampleModalToggle4' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel4' tabindex='-1')
