--- a/src/scss/hacks/_hacks.scss
+++ b/src/scss/hacks/_hacks.scss
@@ -2,10 +2,40 @@
 	// border: 4px solid red;
 	max-width: 1200px !important;
 	padding: 0 15px;
+	
+
+	&__header{
+		position: absolute;
+		background-color: transparent !important;
+		z-index: 1000;
+		top: 0;
+		right: 0;
+	}
+	&__close-modal{
+		position: absolute;
+		border: 1px solid white;
+		display: block;
+		z-index: 1000;
+		cursor: pointer;
+		top: 0;
+		right: 0;
+	}
 }
+
+.video-filter-modal > .modal-content  {
+	background-color: transparent !important;
+	border-radius: 16px;
+	overflow: hidden;
+}
+
+.video-filter-modal > .modal-content > .modal-body  {
+	padding: 0 !important;
+	position: relative;
+}
+
 
 .video-filter-modal >.modal-body > iframe {
 	width: 100%;
 	height: 100%;
 	min-height: 300px; /* Ajusta este valor según sea necesario */
-  }
+}
