--- a/src/pug/internal-modules/modal.pug
+++ b/src/pug/internal-modules/modal.pug
@@ -3,15 +3,16 @@ div(id='exampleModalToggle1' class='modal fade' aria-hidden='true' aria-labelled
 	.modal-dialog.modal-dialog-centered.video-filter-modal
 		.modal-content
 			.modal-body
-				span(class='video-filter-modal__close-modal'): img(src="https://img.betanysports.eu/landing/videos/X.svg", alt="close" data-bs-dismiss='modal' aria-label='Close')
-				video(id='videoElement1' width='100%' height='auto' controls autoplay loop muted)
+				img(src="https://img.betanysports.eu/landing/videos/close.svg", alt="close" class='video-filter-modal__close-modal' data-bs-dismiss='modal')
+				video(id='videoElement2' width='100%' height='auto' controls autoplay loop muted)
 					source(src='video/buying_bitcoin_cash_app_tutorial.mp4' type='video/mp4')
 
 // Modal 2
 div(id='exampleModalToggle2' class='modal fade' aria-hidden='true' aria-labelledby='exampleModalToggleLabel2' tabindex='-1')
 	.modal-dialog.modal-dialog-centered.video-filter-modal
 		.modal-content
-			.modal-body
+			.modal-body 
+				img(src="https://img.betanysports.eu/landing/videos/close.svg", alt="close" class='video-filter-modal__close-modal' data-bs-dismiss='modal')
 				video(id='videoElement2' width='100%' height='auto' controls autoplay loop muted)
 					source(src='video/full_ccash_app_tutorial_ending.mp4' type='video/mp4')
 
@@ -20,6 +21,7 @@ div(id='exampleModalToggle3' class='modal fade' aria-hidden='true' aria-labelled
 	.modal-dialog.modal-dialog-centered.video-filter-modal
 		.modal-content
 			.modal-body
+				img(src="https://img.betanysports.eu/landing/videos/close.svg", alt="close" class='video-filter-modal__close-modal' data-bs-dismiss='modal')
 				video(id='videoElement3' width='100%' height='auto' controls autoplay loop muted)
 					source(src='video/receiving_bitcoin_cash_app.mp4' type='video/mp4')
 
@@ -28,6 +30,7 @@ div(id='exampleModalToggle4' class='modal fade' aria-hidden='true' aria-labelled
 	.modal-dialog.modal-dialog-centered.video-filter-modal
 		.modal-content
 			.modal-body
+				img(src="https://img.betanysports.eu/landing/videos/close.svg", alt="close" class='video-filter-modal__close-modal' data-bs-dismiss='modal')
 				video(id='videoElement4' width='100%' height='auto' controls autoplay loop muted)
 					source(src='video/nhl_dk.mp4' type='video/mp4')
 
@@ -36,6 +39,7 @@ div(id='exampleModalToggle5' class='modal fade' aria-hidden='true' aria-labelled
 	.modal-dialog.modal-dialog-centered.video-filter-modal
 		.modal-content
 			.modal-body
+				img(src="https://img.betanysports.eu/landing/videos/close.svg", alt="close" class='video-filter-modal__close-modal' data-bs-dismiss='modal')
 				video(id='videoElement5' width='100%' height='auto' controls autoplay loop muted)
 					source(src='video/nba_dk.mp4' type='video/mp4')
 
