--- a/src/scss/hacks/_hacks.scss
+++ b/src/scss/hacks/_hacks.scss
@@ -13,12 +13,12 @@
 	}
 	&__close-modal{
 		position: absolute;
-		border: 1px solid white;
+		// border: 1px solid red;
 		display: block;
 		z-index: 1000;
 		cursor: pointer;
-		top: 0;
-		right: 0;
+		top: 20px;
+		right: 20px;
 	}
 }
 
