--- a/public/styles.css
+++ b/public/styles.css
@@ -538,6 +538,7 @@ ul li {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  padding-top: 50px;
 }
 @media screen and (min-width: 768px) {
   .video-banner__title {
@@ -554,6 +555,7 @@ ul li {
 }
 @media screen and (min-width: 1440px) {
   .video-banner__title {
+    padding-top: 0;
     text-align: left;
   }
 }
